--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,8 @@
     --normal-font-size: 1rem;
     --smaller-font-size: .875rem;
   }
+  
+
 }
 
 /*===== BASE =====*/
@@ -561,4 +563,156 @@ img {
   .home__img {
     width: 450px;
   }
+  .project-main {
+    margin: 50px;
+}
+}
+
+
+
+/* ---------------------------- */
+.project-main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+.portfolio-item {
+  width: 320px;
+  margin: 20px;
+  /* border: 1px solid; */
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+}
+
+.portfolio-item img{
+  border-radius: 10px;
+  border: 1px solid white;
+  height: 180px;
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+}
+
+button.btn.view-project-btn {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: .5rem 1rem;
+  font-weight: var(--font-semi);
+  border-radius: 30px;
+  border: none;
+  transition: .3s;
+  margin: 10px;
+  cursor: pointer;
+  text-transform: capitalize;
+}
+
+.portfolio-item h3{
+  font-size: 20px;
+  text-transform: capitalize;
+  margin: 10px 0;
+  font-weight: 520;
+}
+
+.portfolio-item-details{
+    display: none;
+  }
+
+.portfolio-item-thumbnail {
+    display: flex;
+    /* text-align: center; */
+    justify-content: center;
+}
+
+.portfolio-popup{
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  z-index: 200;
+  visibility: hidden;
+}
+.portfolio-popup.open{
+  overflow-y: auto;
+  visibility: visible;
+}
+
+.pp-inner{
+  min-height: 100vh;
+  padding: 40px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pp-content{
+  background-color: aliceblue;
+  padding: 30px;
+  border-radius: 30px;
+  max-width: 900px;
+  width: 100%;
+  backdrop-filter: blur(5px);
+  opacity: 0;
+  transform: scale(0.9);
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+}
+
+.pp-header .btn{
+  height: 40px;
+  width: 40px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: xxx-large;
+  float: right;
+  background: white;
+  border: none;
+  border-radius: 50px;
+  margin: -45px;
+  cursor: pointer;
+}
+
+.pp-thumbnail img{
+  border-radius: 10px;
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+}
+
+.pp-header h3{
+  font-size: 25px;
+  text-transform: capitalize;
+  margin: 20px 0 15px;
+  font-weight: 600;
+}
+
+.pp-body .description{
+  margin-bottom: 20px;
+}
+
+.pp-body .general-info li{
+  margin-bottom: 10px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.pp-body .general-info li span{
+  font-weight: 300;
+}
+
+.pp-body .general-info li a{
+  text-transform: lowercase;
+}
+
+body.hide-scrolling{
+  overflow-y: hidden;
+}
+
+.portfolio-popup.open .pp-content{
+  opacity: 1;
+  transform: scale(1);
+  transition: all 0.5s ease;
 }
