--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -143,6 +143,9 @@ img {
     background-color: var(--second-color);
     transition: .5s;
   }
+  .button{
+    margin-top: 10px;
+  }
 }
 
 .nav__item {
@@ -207,7 +210,7 @@ img {
 
 .home__title {
   font-size: var(--big-font-size);
-  margin-bottom: var(--mb-5);
+  margin-bottom: var(--mb-2);
 }
 
 .home__title-color {
